--- a/JDImport_gui.lpi
+++ b/JDImport_gui.lpi
@@ -45,7 +45,7 @@
         <PackageName Value="zcore"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="20">
+    <Units Count="21">
       <Unit0>
         <Filename Value="JDImport_gui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -54,7 +54,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="42" Y="10"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -67,28 +67,28 @@
         <WindowIndex Value="0"/>
         <TopLine Value="31"/>
         <CursorPos X="44" Y="43"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="blockextract.pas"/>
         <UnitName Value="BlockExtract"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="278"/>
+        <TopLine Value="222"/>
         <CursorPos X="49" Y="293"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="tojmdic.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="toJMDic"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="27"/>
-        <CursorPos X="16" Y="39"/>
-        <UsageCount Value="25"/>
+        <TopLine Value="175"/>
+        <CursorPos X="3" Y="187"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
@@ -102,22 +102,21 @@
       <Unit5>
         <Filename Value="transdb.pas"/>
         <UnitName Value="transdb"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="37" Y="10"/>
-        <UsageCount Value="12"/>
+        <TopLine Value="1076"/>
+        <CursorPos X="1" Y="1089"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="transconst.pas"/>
         <UnitName Value="TransConst"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
+        <TopLine Value="131"/>
         <CursorPos X="2" Y="27"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit6>
       <Unit7>
@@ -127,7 +126,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="66"/>
         <CursorPos X="7" Y="76"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit7>
@@ -138,7 +137,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="62"/>
         <CursorPos X="81" Y="72"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit8>
       <Unit9>
@@ -148,7 +147,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="569"/>
         <CursorPos X="11" Y="579"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit9>
       <Unit10>
@@ -167,7 +166,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="263"/>
         <CursorPos X="21" Y="286"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="25"/>
         <Loaded Value="True"/>
       </Unit11>
       <Unit12>
@@ -178,28 +177,26 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="15" Y="1"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="25"/>
         <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="/Developer/lazarus/lcl/lclproc.pas"/>
         <UnitName Value="LCLProc"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="0"/>
         <TopLine Value="33"/>
         <CursorPos X="16" Y="40"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit13>
       <Unit14>
         <Filename Value="/Developer/lazarus/components/lazutils/lazlogger.pas"/>
         <UnitName Value="LazLogger"/>
-        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
+        <TopLine Value="26"/>
         <CursorPos X="30" Y="11"/>
         <UsageCount Value="21"/>
-        <Loaded Value="True"/>
       </Unit14>
       <Unit15>
         <Filename Value="/Developer/lazarus/lcl/include/lcl_defines.inc"/>
@@ -207,27 +204,27 @@
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="81" Y="3"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="12"/>
         <Loaded Value="True"/>
       </Unit15>
       <Unit16>
         <Filename Value="/Developer/lazarus/components/lazutils/fileutil.pas"/>
         <UnitName Value="FileUtil"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="1" Y="1"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit16>
       <Unit17>
         <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
         <UnitName Value="ZClasses"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="0"/>
         <TopLine Value="40"/>
         <CursorPos X="1" Y="54"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit17>
@@ -249,116 +246,140 @@
         <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit19>
+      <Unit20>
+        <Filename Value="../zeos_lib/src/dbc/ZDbcSqLiteUtils.pas"/>
+        <UnitName Value="ZDbcSqLiteUtils"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="13"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="223"/>
+        <CursorPos X="1" Y="236"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit20>
     </Units>
-    <JumpHistory Count="27" HistoryIndex="26">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="1082" Column="1" TopLine="1074"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="208" Column="1" TopLine="191"/>
       </Position1>
       <Position2>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="9" Column="53" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="209" Column="1" TopLine="191"/>
       </Position2>
       <Position3>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="164" Column="26" TopLine="143"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="210" Column="1" TopLine="191"/>
       </Position3>
       <Position4>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="162" Column="86" TopLine="144"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="211" Column="1" TopLine="191"/>
       </Position4>
       <Position5>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="1496" Column="85" TopLine="1472"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="229" Column="1" TopLine="216"/>
       </Position5>
       <Position6>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="161" Column="34" TopLine="148"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="256" Column="1" TopLine="243"/>
       </Position6>
       <Position7>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="163" Column="44" TopLine="151"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="257" Column="1" TopLine="243"/>
       </Position7>
       <Position8>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="202" Column="24" TopLine="190"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="262" Column="1" TopLine="243"/>
       </Position8>
       <Position9>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="211" Column="26" TopLine="191"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="260" Column="1" TopLine="243"/>
       </Position9>
       <Position10>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="88" Column="41" TopLine="85"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="262" Column="1" TopLine="243"/>
       </Position10>
       <Position11>
         <Filename Value="tojmdic.pas"/>
-        <Caret Line="4" Column="56" TopLine="1"/>
+        <Caret Line="260" Column="1" TopLine="243"/>
       </Position11>
       <Position12>
-        <Filename Value="frmjdimport_u.pas"/>
-        <Caret Line="49" Column="94" TopLine="34"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="262" Column="1" TopLine="243"/>
       </Position12>
       <Position13>
         <Filename Value="tojmdic.pas"/>
-        <Caret Line="183" Column="14" TopLine="171"/>
+        <Caret Line="260" Column="1" TopLine="243"/>
       </Position13>
       <Position14>
-        <Filename Value="transdb.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="262" Column="1" TopLine="243"/>
       </Position14>
       <Position15>
-        <Filename Value="JDImport_gui.lpr"/>
-        <Caret Line="10" Column="56" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="260" Column="1" TopLine="243"/>
       </Position15>
       <Position16>
-        <Filename Value="/Developer/lazarus/lcl/lclproc.pas"/>
-        <Caret Line="42" Column="21" TopLine="33"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="259" Column="1" TopLine="243"/>
       </Position16>
       <Position17>
-        <Filename Value="/Developer/lazarus/components/lazutils/lazlogger.pas"/>
-        <Caret Line="12" Column="47" TopLine="2"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="247" Column="1" TopLine="242"/>
       </Position17>
       <Position18>
-        <Filename Value="/Developer/lazarus/components/lazutils/lazlogger.pas"/>
-        <Caret Line="8" Column="22" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="253" Column="1" TopLine="242"/>
       </Position18>
       <Position19>
-        <Filename Value="/Developer/lazarus/components/lazutils/lazlogger.pas"/>
-        <Caret Line="5" Column="64" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="204" Column="1" TopLine="191"/>
       </Position19>
       <Position20>
-        <Filename Value="/Developer/lazarus/components/lazutils/lazlogger.pas"/>
-        <Caret Line="8" Column="22" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="206" Column="1" TopLine="191"/>
       </Position20>
       <Position21>
-        <Filename Value="/Developer/lazarus/lcl/lclproc.pas"/>
-        <Caret Line="42" Column="21" TopLine="33"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="153" Column="1" TopLine="140"/>
       </Position21>
       <Position22>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="64" Column="1" TopLine="51"/>
       </Position22>
       <Position23>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="84" Column="22" TopLine="63"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="66" Column="1" TopLine="51"/>
       </Position23>
       <Position24>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="77" Column="40" TopLine="66"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="73" Column="1" TopLine="51"/>
       </Position24>
       <Position25>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="92" Column="79" TopLine="80"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="74" Column="1" TopLine="52"/>
       </Position25>
       <Position26>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="54" Column="60" TopLine="47"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="80" Column="1" TopLine="67"/>
       </Position26>
       <Position27>
-        <Filename Value="../zeos_lib/src/core/ZClasses.pas"/>
-        <Caret Line="90" Column="24" TopLine="90"/>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="156" Column="88" TopLine="135"/>
       </Position27>
+      <Position28>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="251" Column="60" TopLine="231"/>
+      </Position28>
+      <Position29>
+        <Filename Value="tojmdic.pas"/>
+        <Caret Line="187" Column="3" TopLine="175"/>
+      </Position29>
+      <Position30>
+        <Filename Value="transdb.pas"/>
+        <Caret Line="1089" Column="1" TopLine="1076"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -382,15 +403,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="transdb.pas"/>
-        <Line Value="1088"/>
-      </Item1>
-    </BreakPoints>
     <Exceptions Count="3">
       <Item1>
         <Name Value="EAbort"/>
